@@ -280,6 +280,9 @@ S3method(predict, decorana)
 S3method(predict, fitspecaccum)
 S3method(predict, humpfit)
 S3method(predict, procrustes)
+S3method(predict, radline)
+S3method(predict, radfit)
+S3method(predict, radfit.frame)
 S3method(predict, rda)
 S3method(predict, specaccum)
 # print: base
